# Lidless

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.claude/: launch.json
.github/workflows/: deploy-api.yml  publish-update.yml  release.yml
apps/api/: README.md  package.json  tsconfig.json  wrangler.jsonc
apps/api/src/: index.ts
apps/desktop/: .env.example  README.md  package.json
apps/desktop/src/: index.html  main.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: cli.rs  control.rs  integrations.rs  lib.rs  main.rs  manager.rs  power.rs
apps/desktop/src-tauri/src/keepawake/: fallback.rs  macos.rs  mod.rs  windows.rs
apps/web/: .env.example  CLAUDE.md  next.config.ts  package.json
apps/web/content/docs/_templates/: README.md  default.mdx  reference.mdx  tutorial.mdx
apps/web/content/docs/en/: getting-started.mdx  index.mdx
apps/web/content/docs/en/guides/: keep-ai-agents-running.mdx  keep-claude-code-awake.mdx  mac-caffeinate-command.mdx  macos-keep-awake.mdx  windows-keep-awake.mdx
apps/web/content/docs/en/reference/: macos-windows-power-management.mdx  settings.mdx
apps/web/content/docs/zh/: getting-started.mdx  index.mdx
apps/web/content/docs/zh/guides/: keep-ai-agents-running.mdx  keep-claude-code-awake.mdx  mac-caffeinate-command.mdx  macos-keep-awake.mdx  windows-keep-awake.mdx
apps/web/content/docs/zh/reference/: macos-windows-power-management.mdx  settings.mdx
apps/web/messages/: en.json  zh.json
apps/web/public/: llms.txt
apps/web/sanity/: schema.example.ts
apps/web/scripts/: verify-telemetry.mjs
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  manifest.ts  sitemap.ts
apps/web/src/app/[locale]/: layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
apps/web/src/app/[locale]/[...rest]/: page.tsx
apps/web/src/app/[locale]/did-codex-reset-today/: opengraph-image.tsx  page.tsx
apps/web/src/app/[locale]/docs/: layout.tsx  page.tsx
apps/web/src/app/[locale]/docs/[...slug]/: page.tsx
apps/web/src/app/api/codex-status/: route.ts
apps/web/src/components/: app-window.tsx  footer.tsx  icons.tsx  json-ld.tsx  language-switcher.tsx  nav.tsx  section-heading.tsx
apps/web/src/components/docs/: article-nav.tsx  breadcrumbs.tsx  callout.tsx  mdx-components.tsx  pager.tsx  pre.tsx  sidebar.tsx  steps.tsx  tabs.tsx  templates.tsx  toc.tsx
apps/web/src/components/sections/: codex-verdict.tsx  cta-band.tsx  faq.tsx  features.tsx  hero.tsx  how-it-works.tsx  use-cases.tsx
apps/web/src/config/: site.ts
apps/web/src/i18n/: navigation.ts  request.ts  routing.ts
apps/web/src/lib/: codex-reset.ts  seo.ts
apps/web/src/lib/cms/: client.ts  demo-data.ts  index.ts  queries.ts  types.ts
apps/web/src/lib/content/: index.ts  types.ts  use-cases.ts
apps/web/src/lib/docs/: mdx.ts  source.ts  toc.ts  types.ts
scripts/: capture_audit.py  capture_screenshot.py  run_audit.ps1  run_audit2.ps1
src/: index.html  styles.css
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  power.rs
src-tauri/src/keepawake/: mod.rs
