[package]
name = "lidless"
version = "0.1.0"
description = "Keep awake while locked: prevent system sleep and keep the network online when locked, handy for remote Claude Code / RustDesk"
authors = ["Zhang Bo"]
edition = "2021"
rust-version = "1.82"

# main.rs calls run() in lib.rs; the _lib suffix avoids a name clash with the executable
[lib]
name = "lidless_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local control channel: a tiny HTTP server bound to 127.0.0.1 only, used by
# the agent hook to drive keep-awake.
tiny_http = "0.12"
# Preserve the user's comments and formatting when editing Codex's config.toml (for one-click setup).
toml_edit = "0.22"

# Keep-awake and power detection on Windows / macOS are all hand-written FFI
# (see src/keepawake, src/power), with no third-party crates so dependencies
# don't shift across versions. The control channel uses the two lightweight crates above.
