[package]
name = "lidless"
version = "0.1.0"
description = "Keep awake while locked: prevent system sleep and keep the network online when locked, handy for remote Claude Code / RustDesk"
authors = ["Zhang Bo"]
edition = "2021"
rust-version = "1.82"

# main.rs calls run() in lib.rs; the _lib suffix avoids a name clash with the executable
[lib]
name = "lidless_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
# Auto-update: check an endpoint, verify the download against the embedded
# minisign public key, install, then relaunch. Dialog is used to ask the user
# before applying (so keep-awake isn't interrupted without consent).
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Keep-awake and power detection on Windows / macOS are all hand-written FFI
# (see src/keepawake, src/power), with no third-party crates so dependencies
# don't shift across versions.
